# Qt-Timer

./: CMakeLists.txt  Data.cpp  Data.h  Tempo.cpp  Tempo.h  Timer.cpp  Timer.h  main.cpp
include/: Data.h  MainWindow.h  Tempo.h  Timer.h
src/: Data.cpp  MainWindow.cpp  Tempo.cpp  Timer.cpp
tests/: TestData.cpp  TestTempo.cpp  TestTimer.cpp
ui/: MainWindow.ui
